--- a/package.json
+++ b/package.json
@@ -11,41 +11,68 @@
         "Extension Packs"
     ],
     "extensionPack": [ 
-        "austin.code-gnu-global", 
-        "bbenoist.Doxygen", 
-        "cheshirekow.cmake-format", 
-        "christian-kohler.path-intellisense", 
-        "codezombiech.gitignore", 
-        "CoenraadS.bracket-pair-colorizer-2", 
-        "cschlosser.doxdocgen", 
-        "DamianKoper.gdb-debug", 
-        "DavidWang.ini-for-vscode", 
-        "donjayamanne.githistory", 
-        "eamodio.gitlens", 
-        "esbenp.prettier-vscode", 
-        "jbockle.jbockle-format-files", 
-        "luveti.kconfig", 
-        "mhutchie.git-graph", 
-        "microhobby.linuxkerneldev", 
-        "ms-azuretools.vscode-docker", 
-        "ms-python.python", 
-        "ms-toolsai.jupyter", 
-        "ms-vscode-remote.remote-containers", 
-        "ms-vscode-remote.remote-ssh", 
-        "ms-vscode-remote.remote-ssh-edit", 
-        "ms-vscode-remote.remote-wsl", 
-        "ms-vscode.cmake-tools", 
-        "ms-vscode.cpptools", 
-        "ms-vscode.hexeditor", 
-        "ms-vsliveshare.vsliveshare", 
-        "ms-vsliveshare.vsliveshare-audio", 
-        "ms-vsliveshare.vsliveshare-pack", 
-        "nobuhito.printcode", 
-        "plorefice.devicetree", 
-        "pnp.polacode", 
-        "seanwu.vscode-qt-for-python", 
-        "TabNine.tabnine-vscode", 
-        "tomoki1207.pdf", 
-        "twxs.cmake"
+        "adpyke.codesnap",
+        "alefragnani.separators",
+        "batisteo.vscode-django",
+        "bmpenuelas.waveform-render",
+        "christian-kohler.path-intellisense",
+        "codezombiech.gitignore",
+        "cschlosser.doxdocgen",
+        "donjayamanne.githistory",
+        "donjayamanne.python-environment-manager",
+        "donjayamanne.python-extension-pack",
+        "eamodio.gitlens",
+        "esbenp.prettier-vscode",
+        "exodiusstudios.comment-anchors",
+        "github.copilot",
+        "github.copilot-chat",
+        "github.vscode-github-actions",
+        "jbenden.c-cpp-flylint",
+        "jeff-hykin.better-cpp-syntax",
+        "kevinrose.vsc-python-indent",
+        "mateuszchudyk.hexinspector",
+        "mcu-debug.debug-tracker-vscode",
+        "mechatroner.rainbow-csv",
+        "mhutchie.git-graph",
+        "microhobby.linuxkerneldev",
+        "ms-python.debugpy",
+        "ms-python.pylint",
+        "ms-python.python",
+        "ms-python.vscode-pylance",
+        "ms-toolsai.datawrangler",
+        "ms-toolsai.jupyter",
+        "ms-toolsai.jupyter-keymap",
+        "ms-toolsai.jupyter-renderers",
+        "ms-toolsai.vscode-jupyter-cell-tags",
+        "ms-toolsai.vscode-jupyter-slideshow",
+        "ms-vscode-remote.remote-ssh",
+        "ms-vscode-remote.remote-ssh-edit",
+        "ms-vscode-remote.remote-wsl",
+        "ms-vscode.cmake-tools",
+        "ms-vscode.cpptools",
+        "ms-vscode.cpptools-extension-pack",
+        "ms-vscode.cpptools-themes",
+        "ms-vscode.hexeditor",
+        "ms-vscode.makefile-tools",
+        "ms-vscode.remote-explorer",
+        "ms-vscode.vscode-serial-monitor",
+        "ms-vscode.vscode-speech",
+        "ms-vsliveshare.vsliveshare",
+        "njpwerner.autodocstring",
+        "oderwat.indent-rainbow",
+        "pdconsec.vscode-print",
+        "pkief.material-icon-theme",
+        "plorefice.devicetree",
+        "redhat.vscode-xml",
+        "redhat.vscode-yaml",
+        "rust-lang.rust-analyzer",
+        "sumneko.lua",
+        "tamasfe.even-better-toml",
+        "twxs.cmake",
+        "visualstudioexptteam.intellicode-api-usage-examples",
+        "visualstudioexptteam.vscodeintellicode",
+        "vsciot-vscode.vscode-arduino",
+        "yzhang.markdown-all-in-one",
+        "zhuangtongfa.material-theme"
     ]
 }
